_sass/_about.scss
.sports{
	padding-top: 50px;
    padding-bottom: 50px;
    background-image: url(../images/bkg_3.png);
    background-position: 0px 0px, 0px 0px;
    background-size: cover, auto;
    h1{
    	text-align: center;
    	color: #fff;
    }
    p{
    	text-align: justify;
    	color: #fff;
    	margin-bottom: 50px;
	    margin-top: 20px;
		color: #fff;
		font-size: 19px;
		line-height: 27px;
		font-weight: 400;
    }
    .pictos-grp {
    	margin-bottom: 20px;
        @media (max-width: 991px){
            div{
                text-align: center;
            }
        }
	}
	.links_sports {
		display: inline-block;
		margin-top: 10px;
		font-family: Montserrat, sans-serif;
		color: #fff;
		font-size: 16px;
	}
}
.key_numbers{
	background-image: url(../images/bkg_3.png);
    background-position: 0px 0px, 0px 0px;
    background-size: cover, auto;
    padding-top: 50px;
    padding-bottom: 50px;
	h1{
    	text-align: center;
    	color: #fff;
    }
    p{
    	color: #fff;
    	margin-bottom: 50px;
	    margin-top: 20px;
		color: #fff;
		font-size: 19px;
		line-height: 27px;
		font-weight: 400;
    }
}
.about_the_yog_p.descr_pictos{
    margin-bottom: 50px;
    text-align: center;
    a{
        color: #fff;
    }
}
@media (max-width: 991px){
    .key_numbers_text {
        position: static;
        text-align: center;
    }
}
.key_numbers_text {
    line-height: 19px;
}
.key_numbers_text {
    text-align: left;
}
.key_numbers_img {
    padding-top:20px;
}
.about_yog_1{
    margin-top: 150px;
    background-image: url(../images/bkg_3.png);
    background-position: 0px 0px, 0px 0px;
    background-size: cover;
}
.about_yog_2{
    background-image: url(../images/bkg_blue.png);
    background-position: 0px 0px;
    background-size: cover;
}
.about_yog{
    h1{
        margin-bottom: 60px;
        color: #fff;
        text-align: center;
    }
    display: block;
    margin-right: auto;
    margin-left: auto;
    padding-top: 44px;
    padding-bottom: 44px;
    p{
        margin-top: 20px;
        color: #fff;
        font-size: 19px;
        font-family: Montserrat, sans-serif;
        line-height: 27px;
        font-weight: 400;
        text-align: justify;
    }
}
.facts{
    padding-top: 100px;
    padding-bottom: 100px;
}
@media (min-width: 768px){
  .seven-cols .col-md-1,
  .seven-cols .col-sm-1,
  .seven-cols .col-lg-1  {
    width: 100%;
    *width: 100%;
  }
}

@media (min-width: 992px) {
  .seven-cols .col-md-1,
  .seven-cols .col-sm-1,
  .seven-cols .col-lg-1 {
    width: 14.285714285714285714285714285714%;
    *width: 14.285714285714285714285714285714%;
  }
}

/**
 *  The following is not really needed in this case
 *  Only to demonstrate the usage of @media for large screens
 */    
@media (min-width: 1200px) {
  .seven-cols .col-md-1,
  .seven-cols .col-sm-1,
  .seven-cols .col-lg-1 {
    width: 14.285714285714285714285714285714%;
    *width: 14.285714285714285714285714285714%;
  }
}

